--- a/client/src/features/cart/cart.module.css
+++ b/client/src/features/cart/cart.module.css
@@ -1,26 +1,23 @@
 .cartContainer {
-  padding-left: 1rem /* 16px */;
-  padding-right: 1rem /* 16px */;
-  padding-top: 0.75rem /* 12px */;
-  padding-bottom: 0.75rem /* 12px */;
-  margin-top: 0.25rem /* 4px */;
-  /*"px-4 py-3 mt-1"*/
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  margin-top: 0.25rem;
 }
 .yourCart {
-  font-size: 1.25rem /* 20px */;
-  line-height: 1.75rem /* 28px */;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   font-weight: 600;
-  margin-top: 1.75rem /* 28px */;
-  /*"text-xl font-semibold mt-7"*/
+  margin-top: 1.75rem;
   font-family: "Courier New", Courier, monospace;
   text-transform: uppercase;
 }
 
 .cartPizzaListContainer {
-  margin-top: 0.75rem /* 12px */;
+  margin-top: 0.75rem;
   border-bottom-width: 1px;
   list-style-type: none;
-  /*"mt-3 border-b divide-y divide-stone-300"*/
 }
 
 .cartPizzaListContainer.divide-y > :not([hidden]) ~ :not([hidden]) {
@@ -35,26 +32,13 @@
 }
 
 .cartItem {
-  padding-top: 0.75rem /* 12px */;
-  padding-bottom: 0.75rem /* 12px */;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   font-family: "Roboto";
 }
 
-@media (min-width: 640px) {
-  .cartItem {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-}
-
 .cartItem p {
-  margin-bottom: 0.25rem /* 4px */;
-}
-@media (min-width: 640px) {
-  .cartItem p {
-    margin-bottom: 0px;
-  }
+  margin-bottom: 0.25rem;
 }
 
 .cartItem div {
@@ -63,11 +47,6 @@
   justify-content: space-between;
 }
 
-@media (min-width: 640px) {
-  .cartItem div {
-    gap: 1.5rem /* 24px */;
-  }
-}
 /* ***************************************************************************** */
 .updateContollersContainer {
   display: flex;
@@ -95,10 +74,10 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.75rem 1rem; /*12px 16px */
+  padding: 0.75rem 1rem;
   text-transform: uppercase;
-  font-size: 0.875rem /* 14px */;
-  line-height: 1.25rem /* 20px */;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   font-family: "Roboto";
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -106,23 +85,9 @@ h4 {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-@media (min-width: 640px) {
-  .cartOverView {
-    padding-left: 1.5rem /* 24px */;
-    padding-right: 1.5rem /* 24px */;
-  }
-}
-
-@media (min-width: 768px) {
-  .cartOverView {
-    font-size: 1rem /* 16px */;
-    line-height: 1.5rem /* 24px */;
-  }
-}
-
 .cartoverViewInfo {
-  margin-top: 0.75rem /* 12px */;
-  margin-bottom: 0.75rem /* 12px */;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
@@ -131,18 +96,17 @@ h4 {
   margin-right: 10px;
 }
 
-/*my-3 space-x-4 text-gray-300 sm:space-x-6*/
 /**************************************************************** */
 .priorityContainer {
   display: flex;
   align-items: flex-start;
-  gap: 1rem /* 16px */;
+  gap: 1rem;
   margin-top: 1rem;
   margin-bottom: 0.75rem;
 }
 .priorityContainer input {
-  width: 1.5rem /* 24px */;
-  height: 1.5rem /* 24px */;
+  width: 1.5rem;
+  height: 1.5rem;
   accent-color: #facc15;
   outline: none;
   box-shadow: 0 0 0 2px #f59e0b;
@@ -152,4 +116,28 @@ h4 {
 .priorityContainer label {
   font-family: "Helvetica Neue", Helvetica, Arial;
 }
-/* "w-6 h-6 mb-4 accent-yellow-400 focus:ring-offfset-2 focus:ring-yellow-400" */
+
+@media (min-width: 640px) {
+  .cartItem {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .cartOverView {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .cartItem p {
+    margin-bottom: 0px;
+  }
+  .cartItem div {
+    gap: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .cartOverView {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
