--- a/client/src/features/order/Order.module.css
+++ b/client/src/features/order/Order.module.css
@@ -113,3 +113,26 @@
   font-weight: 700;
 }
 /************************************************************************************/
+
+@media (max-width: 700px) {
+  .orderMainContainer {
+    width: fit-content;
+  }
+}
+
+@media (max-width: 1172px) {
+  .orderStatusContainer {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 621px) {
+  .spaceX2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .spaceX2 span {
+    margin-top: 10px;
+  }
+}
