--- a/client/src/features/user/User.module.css
+++ b/client/src/features/user/User.module.css
@@ -101,3 +101,16 @@
   width: 70%;
   font-size: 18px;
 }
+
+@media (max-width: 800px) {
+  .userFormContainer h1 {
+    text-align: center;
+  }
+  .accountFormContainer form {
+    width: fit-content;
+  }
+  .accountFormContainer form div input {
+    font-size: 16px;
+    width: 60%;
+  }
+}
