--- a/client/src/ui/Login/Login.module.css
+++ b/client/src/ui/Login/Login.module.css
@@ -69,3 +69,12 @@
   font-family: "Roboto";
   margin-bottom: 8px;
 }
+
+@media (max-width: 999px) {
+  .formContainer {
+    width: calc(100vw - 60px);
+  }
+  .loginContainer h1 {
+    font-size: 1.5rem;
+  }
+}
