--- a/client/src/ui/Login/Login.module.css
+++ b/client/src/ui/Login/Login.module.css
@@ -1,37 +1,39 @@
 .loginContainer {
   width: 100dvw;
   height: 100dvh;
+  background-color: var(--color-grey-0);
+}
+
+.formContainer {
+  width: 40%;
+  padding: 2rem 3.5rem;
+  background-color: var(--color-yellow-100);
+  border-radius: 1rem;
+  box-shadow: 0px 4px 16px 4px #818181;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--color-yellow-300);
 }
-.loginContainer h1 {
+
+.formContainer h2 {
   color: var(--color-grey-900);
-  margin: 15px;
+  margin-bottom: 1.5rem;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
 }
-.formContainer {
-  width: 40%;
-  padding: 15px;
-  background-color: var(--color-yellow-100);
-  border-radius: 15px;
+.formInputContianer {
   display: flex;
   flex-direction: column;
-  padding: 10px;
-  gap: 20px;
 }
-
-.formContainer:hover {
-  box-shadow: 0px 4px 16px 4px #818181;
-}
-
-.formContainer label {
+.formContainerlabel {
   font-family: "Roboto";
-  font-size: x-large;
+  font-size: 1.3rem;
+  font-weight: 500;
   color: var(--color-yellow-900);
+  margin-right: 1rem;
 }
 
 .formContainer input {
@@ -39,7 +41,8 @@
   border: none;
   padding: 13px;
   border-radius: 10px;
-  width: 90%;
+  margin-top: 0.8rem;
+  margin-bottom: 1.3rem;
 }
 
 .formContainer input::placeholder {
@@ -60,14 +63,11 @@
 .btnContainer {
   display: flex;
   justify-content: center;
+  margin-bottom: 0.6rem;
 }
 
-.createAccountContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: "Roboto";
-  margin-bottom: 8px;
+.otpContainer {
+  width: 90%;
 }
 
 @media (max-width: 999px) {
