add user modification

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,3 +75,29 @@
 body {
   font-family: "Courier New", Courier, monospace;
 }
+
+/* Styles for the scrollbar track */
+::-webkit-scrollbar {
+  width: 5px; /* Width of the scrollbar */
+  border-radius: 4px; /* Rounded corners */
+}
+
+/* Styles for the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-yellow-400); /* Color of the scrollbar thumb */
+  border-radius: 4px; /* Rounded corners */
+}
+
+/* Styles for the scrollbar track on hover */
+::-webkit-scrollbar-track:hover {
+  background-color: var(
+    --color-yellow-200
+  ); /* Color of the scrollbar track on hover */
+}
+
+/* Styles for the scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(
+    --color-yellow-200
+  ); /* Color of the scrollbar thumb on hover */
+}
