--- a/client/src/ui/Home/Home.module.css
+++ b/client/src/ui/Home/Home.module.css
@@ -1,7 +1,6 @@
 .homeContainer {
-  width: 100dvw;
-  height: 100dvh;
+  width: 100svw;
+  height: 100svh;
   overflow: auto;
 }
-
 /* ********************************************************************************** */
