--- a/client/src/features/user/User.module.css
+++ b/client/src/features/user/User.module.css
@@ -1,6 +1,6 @@
 .userFormContainer {
-  width: 100dvw;
-  height: 100dvh;
+  width: 100%;
+  height: 100%;
   font-family: "Roboto";
   display: flex;
   flex-direction: column;
@@ -43,14 +43,15 @@
 
 /* ****************************************************************************************** */
 .accountContainer {
-  width: 100dvw;
-  height: 100dvh;
+  width: 100%;
+  height: 100%;
   background-color: var(--color-yellow-200);
   padding-top: 4.5rem;
 }
 
 .accountFormContainer {
   width: 100%;
+  height: 100%;
   padding-top: 4.5rem;
   display: flex;
   flex-direction: column;
