--- a/client/src/ui/Button/Button.module.css
+++ b/client/src/ui/Button/Button.module.css
@@ -5,7 +5,7 @@
   border-radius: 8px;
   align-self: center;
   width: fit-content;
-  padding: 0.7rem 1rem;
+  padding: 0.7rem;
   margin: 10px;
   font-weight: 600;
   font-family: "Roboto";
