--- a/client/src/features/order/Order.module.css
+++ b/client/src/features/order/Order.module.css
@@ -112,6 +112,12 @@
 .orderTotalPrice {
   font-weight: 700;
 }
+
+.payOrderContianer {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+}
 /************************************************************************************/
 
 @media (max-width: 700px) {
